# verification-course

./: CMakeLists.txt  README.md  main.cpp  task.md
.github/workflows/: debug.yml
